--- a/css/promo.css
+++ b/css/promo.css
@@ -5,7 +5,7 @@
 .promo__picture-text {
     position: absolute;
     left: 50%;
-    top: 77px;
+    top: 76px;
     transform: translateX(-50%);
 }
 
