--- a/css/reasons.css
+++ b/css/reasons.css
@@ -22,7 +22,7 @@
     color: #333;
 
     width: 550px;
-    margin: 0 auto 49px;
+    margin: 0 auto 48px;
 }
 
 .reasons__list {
